<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Museum Partner</string>
    <string name="about">Museum Partner is meant to substitute the tools that was used previously for Audio Device in Most Museum. This Apps allow user to listen to audio by scanning the QR Code Available in the museum. Visitor area also able to View any releavant information provided by the Museum regarding the exhibit from the QR code taken. This apps is created by RC-Tech Team from Republic Polytechnic as their Final Year Project. Thank you for using this Apps.</string>
    <string name="pref_autoplay_summary">Automatically play audio when started</string>
    <string name="pref_next_summary">Play next sound track on completed</string>
    <string name="pref_repeat_summary">Repeat playing when all sound track in the playlist has been played</string>
    <string name="pref_shuffle_summary">Play sound track randomly, keep repeat after completion</string>
    <string name="pref_stack_summary">Allow you to go back to previous exhibit when you start a new scan</string>
    <string name="setting_server_summary">Server URL where the QR Code Data located (Use Default)</string>
    <string-array name="servers">
        <item>RC-Tech</item>
        <item>Localhost</item>
        <item>192.168.0.10</item>
    </string-array>
    <string-array name="url">
        <item>http://rc-tech.appspot.com/</item>
        <item>http://localhost/</item>
        <item>http://192.168.0.10/</item>
    </string-array>
    <string name="help_1_title">
    
    Quick Guide\n
    1. In Dashboard main menu press Scan button\n
    2. Scan QR Code which can be found near the Museum Exhibit\n
    3. Wait For data being retrieved, and Done!!!\n
	This page will be your Exhibit Explorer\n\n

	Different ways to Retrieve Data\n
	- Scan QR Code\n
	- Load from Bookmark\n
	- Load from Visited Exhibit\n
	For Advance user: You can set your Server in the Dashboard Option\n\n

	Manage Audio Setting\n
	1. In Exhibit Explorer, Press Option button\n
	2. Select Playlist to see the available playable audio from the exhibit\n
	3. Select MediaController to display the Audio Controller for 3 second\n
	4. Select Setting, and configure based on your preference</string>
    <string name="info_spinner_prompt">Select Article</string>
    
</resources>
